tests/expected_invalid_parse_missing_generic_function_param_comma.diag.out
<input>:2:16: error: expected ',' between generic parameters
    fn choose<Left Right>(left: Left, right: Right) -> Left {
                   ^^^^^
